--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 #spring.datasource.password=1234
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/audiotome?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/audiotome?createDatabaseIfNotExist=true
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/audiotomeserver?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/audiotome?createDatabaseIfNotExist=true
 spring.port=8080
 #Hibernate Configuration
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
