--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 #spring.datasource.username=au
 #spring.datasource.password=1234
 #spring.datasource.url=jdbc:mysql://mysqldb:3306/audiotome?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=audiotome
+spring.datasource.password=audiotome
 spring.datasource.url=jdbc:mysql://172.30.118.103:3306/audiotomeserver?useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/audiotome?createDatabaseIfNotExist=true
-spring.port=8080
+#spring.port=8080
 #Hibernate Configuration
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.generate-ddl=true
