--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #Database Configuration
-#spring.datasource.username=au
-#spring.datasource.password=1234
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/audiotome?createDatabaseIfNotExist=true
-spring.datasource.username=audiotome
-spring.datasource.password=audiotome
-spring.datasource.url=jdbc:mysql://172.30.118.103:3306/audiotomeserver?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=eM5E3gFjiARjM1JObu1m
+spring.datasource.url=jdbc:mysql://containers-us-west-174.railway.app:6562/railway?createDatabaseIfNotExist=true
+#spring.datasource.username=audiotome
+#spring.datasource.password=audiotome
+#spring.datasource.url=jdbc:mysql://172.30.118.103:3306/audiotomeserver?useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/audiotome?createDatabaseIfNotExist=true
 #spring.port=8080
 #Hibernate Configuration
