--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 #Database Configuration
-spring.datasource.username=root
-spring.datasource.password=eM5E3gFjiARjM1JObu1m
-spring.datasource.url=jdbc:mysql://containers-us-west-174.railway.app/railway?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:eM5E3gFjiARjM1JObu1m@containers-us-west-174.railway.app:6562/railway
 #spring.datasource.username=audiotome
 #spring.datasource.password=audiotome
 #spring.datasource.url=jdbc:mysql://172.30.118.103:3306/audiotomeserver?useSSL=false
